# bazel-bash-bug

./: BUILD.bazel  README.md  WORKSPACE  fb.go  fb_test.go  package.json
main/: BUILD.bazel  main.go
